# urdfx

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: python-bindings.yml
apps/visualization/: package.json
apps/visualization/public/: urdfx.js
apps/visualization/src/: App.tsx
apps/visualization/src/components/: RobotRenderer.tsx
benchmarks/: CMakeLists.txt  ik_benchmarks.cpp  jacobian_benchmarks.cpp  mixed_ik_benchmarks.cpp
benchmarks/results/: benchmark_summary.md  cpp_benchmark_summary.md  ik_benchmarks_20251120.json  ik_benchmarks_i7win.json  ik_benchmarks_latest.json  jacobian_benchmarks_latest.json  tier_b_benchmark_results.json  ur5e+x_results.json  ur5e+xy_results.json  ur5e+xyz_results.json  ur5e_results.json  visualize.html
bindings/python/: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
bindings/python/benchmarks/: README.md  __init__.py  bench_forward_kinematics.py  bench_inverse_kinematics.py  bench_jacobian.py  generate_dataset.py  generator.py  oracle.py  run_all_benchmarks.py  run_benchmarks.py  run_tier_a_benchmarks.py  run_tier_b_benchmarks.py  visualize.py  visualize_benchmarks.py  visualize_cpp_benchmarks.py
bindings/python/benchmarks/mixkinbench/: dataset.py  oracle.py  test_generator.py  verify_oracle.py  visualize.py
bindings/python/src/: bindings.cpp
bindings/python/tests/: conftest.py  test_forward_kinematics.py  test_integration.py  test_inverse_kinematics.py  test_jacobian.py  test_robot_model.py  test_transform.py
bindings/python/urdfx/: __init__.py  __init__.pyi
bindings/wasm/: CMakeLists.txt  package.json  urdfx.d.ts
bindings/wasm/cmake/: CheckWasmSize.cmake
bindings/wasm/src/: bindings.cpp
bindings/wasm/tests/browser/: module.browser.test.js
bindings/wasm/tests/manual/: index.html
bindings/wasm/tests/node/: full_bindings.test.js  module.test.js
cmake/: Dependencies.cmake  urdfxConfig.cmake.in
core/: CMakeLists.txt
core/include/urdfx/: export.h  inverse_kinematics.h  kinematics.h  logging.h  robot_model.h  urdf_parser.h
core/src/: CMakeLists.txt  inverse_kinematics.cpp  kinematics.cpp  urdf_parser.cpp
core/tests/: CMakeLists.txt  test_inverse_kinematics.cpp  test_kinematics.cpp  test_urdf_parser.cpp
docs/api/: README.md  python.md
docs/benchmarks/: mixkinbench.md
docs/guides/: getting-started.md
docs/tutorials/: cpp-tutorial.md
examples/cpp/: CMakeLists.txt  forward_kinematics_example.cpp
examples/javascript/: README.md  forward_kinematics.js  package.json  visualization.html  visualization.js
examples/models/ur5/: ur5e+x.urdf  ur5e+xy.urdf  ur5e+xyz.urdf  ur5e.urdf
examples/python/: README.md  forward_kinematics.py  inverse_kinematics.py  jacobian_analysis.py  trajectory_generation.py
include/urdfx/: kinematics.h  logging.h  robot_model.h  urdf_parser.h
openspec/: project.md
openspec/changes/add-mixed-chain-benchmark-suite/: design.md  tasks.md
openspec/changes/add-mixed-chain-benchmark-suite/specs/benchmark-infrastructure/: spec.md
openspec/changes/add-mixed-chain-benchmark-suite/specs/synthetic-robot-generation/: spec.md
openspec/changes/add-python-bindings/: proposal.md
openspec/changes/add-robotics-kinematics-library/: design.md  proposal.md  tasks.md
openspec/changes/add-robotics-kinematics-library/specs/build-system/: spec.md
openspec/changes/add-robotics-kinematics-library/specs/forward-kinematics/: spec.md
openspec/changes/add-robotics-kinematics-library/specs/inverse-kinematics/: spec.md
openspec/changes/add-robotics-kinematics-library/specs/jacobian-computation/: spec.md
openspec/changes/add-robotics-kinematics-library/specs/python-bindings/: spec.md
openspec/changes/add-robotics-kinematics-library/specs/urdf-parsing/: spec.md
openspec/changes/add-robotics-kinematics-library/specs/visualization-app/: spec.md
openspec/changes/add-robotics-kinematics-library/specs/wasm-bindings/: spec.md
openspec/changes/archive/2025-11-19-restructure-project-layout/: design.md  proposal.md
openspec/changes/archive/2025-11-21-add-python-bindings/: design.md  tasks.md
openspec/changes/archive/2025-11-21-add-python-bindings/specs/python-bindings/: spec.md
openspec/changes/archive/2025-11-22-add-mixed-chain-benchmark-suite/: proposal.md  tasks.md
openspec/changes/archive/add-windows-build-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/add-windows-build-support/specs/cross-platform/: spec.md
openspec/changes/replace-cppad-with-analytical-jacobian/: design.md  proposal.md  tasks.md
openspec/changes/replace-cppad-with-analytical-jacobian/specs/jacobian-computation/: spec.md
openspec/changes/restructure-project-layout/: tasks.md
openspec/specs/benchmark-infrastructure/: spec.md
openspec/specs/python-bindings/: spec.md
openspec/specs/synthetic-robot-generation/: spec.md
scripts/: PUBLISH_README.md  build-viz.ps1  build-wasm.ps1  publish-npm.ps1  publish-npm.sh  setup.sh
src/: CMakeLists.txt  kinematics.cpp  robot_model.cpp  urdf_parser.cpp
tests/: CMakeLists.txt  test_kinematics.cpp  test_main.cpp  test_urdf_parser.cpp
visualization/: .eslintrc.json  .prettierignore  package.json  vite.config.ts
visualization/public/: meshes  ur5e.urdf  urdfx.js
visualization/src/: App.css  App.tsx
visualization/src/components/: ControlModeSelector.css  ControlModeSelector.tsx  IKControlPanel.css  IKControlPanel.tsx  JointControlPanel.css  JointControlPanel.tsx  PoseDisplay.css  PoseDisplay.tsx  RobotRenderer.tsx
visualization/src/types/: index.ts
visualization/src/utils/: embind.ts  sceneBuilder.ts  urdfParser.ts  wasmLoader.ts
wasm/: CMakeLists.txt  jest.config.cjs
wasm/src/: bindings.cpp
