[build-system]
requires = ["scikit-build-core>=0.5.0", "nanobind>=1.8.0", "numpy>=1.20"]
build-backend = "scikit_build_core.build"

[project]
name = "urdfx"
version = "0.1.0"
description = "Python bindings for urdfx library"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "URDFX Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.20",
]

[tool.scikit-build]
cmake.source-dir = "../.."
cmake.args = [
    "-DBUILD_PYTHON_BINDINGS=ON",
    "-DBUILD_TESTING=OFF", 
    "-DBUILD_EXAMPLES=OFF", 
    "-DBUILD_BENCHMARKS=OFF",
    "-DBUILD_WASM=OFF"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

